<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_vendor"
            android:icon="@drawable/ic_vendor"
            android:title="@string/menu_vendor"
            />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart"
            android:iconTint="@color/pin_location_button_bg"
            />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login"
            android:iconTint="@color/pin_location_button_bg"
            android:iconTintMode="add"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
    </group>
</menu>