<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.GroceerCart.sa.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_vendor"
            app:destination="@id/nav_vendor" />
    </fragment>

    <fragment
        android:id="@+id/nav_vendor"
        android:name="com.GroceerCart.sa.activity.ui.vendor.VendorFragment"
        android:label="@string/menu_vendor"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_vendor_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.GroceerCart.sa.activity.ui.cart.GroceerCartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_nav_cart_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.GroceerCart.sa.activity.ui.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_account"
            app:destination="@+id/nav_account" />
    </fragment>

    <fragment
        android:id="@+id/nav_account"
        android:name="com.GroceerCart.sa.activity.ui.AccountFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_account" />
</navigation>