<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_screen_bg"
    tools:context=".activity.GroceerPinActivity">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_app"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/ic_groceer_logo" />

    <EditText
        android:id="@+id/edtPinCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edt_enter_background"
        android:ems="10"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/enter_pincode"
        android:inputType="phone"
        android:textColor="@color/splash_app_name_color"
        android:textColorHint="@color/splash_app_name_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <View
        android:id="@+id/viewLeft"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/splash_app_name_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_text"
        android:textColor="@color/splash_app_name_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewRight"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/splash_app_name_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="Awesome button"
        android:backgroundTint="@color/pin_location_button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewRight"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/viewLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651"
        app:icon="@drawable/ic_gps_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
         />-->

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/button_location"
        android:padding="5dp"
        android:text="@string/button_location_test"
        android:textAllCaps="false"
        android:textColor="@color/color_white_text"
        android:textSize="15sp"
        android:onClick="getPinLocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewRight"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/viewLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/button_location"
        android:padding="5dp"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:textColor="@color/color_white_text"
        android:textSize="15sp"
        android:onClick="getVendorList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation"
        app:layout_constraintVertical_bias="0.231" />


</androidx.constraintlayout.widget.ConstraintLayout>